# investing-dashboard

./: .gitignore  DEPLOY.md  MANUAL_SETUP_LOG.md  ROADMAP.md  SETUP.md  STRUCTURE.md  cross_app_schema.sql  fetch_smid_data.py  fix_and_push.py  index-v2.html  index.html  portfolio_schema.sql  smid_data.json
.claude/: settings.local.json
.github/workflows/: fetch-data.yml
assets/: index-B3dqPA9t.js  index-DkTs9o9l.css
backend/: .env.example  openbb_quotes.py  railway.toml  requirements.txt  server.py  server_v2.py
data/: README.md  moving_snapshot.json  positions.json  regimes.json  sectors.json  watchlist.json
layouts/: adam-preview.html  belle-preview.html  george-preview.html  hype-ledger-v1.html  test.html
react-app/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json  vite.config.js
react-app/src/: App.css  App.jsx  DashboardApp.jsx
react-app/src-tauri/: Cargo.toml  tauri.conf.json
react-app/src-tauri/src/: main.rs
react-app/src/components/: TradeImpulseWidget.jsx
react-app/src/config/: api.js
react-app/src/context/: DashboardContext.jsx
react-app/src/data/: corrData.js  radarData.js  regimes.js  smidStocks.js
react-app/src/fantasy/: FantasyAdmin.jsx  FantasyCreate.jsx  FantasyHome.jsx  FantasyJoin.jsx  FantasyLeaderboard.jsx  FantasyMarket.jsx  FantasyPortfolio.jsx  FantasyRecap.jsx  FantasyShell.jsx  FantasyTransactions.jsx  fantasy.css  storage.js
react-app/src/hooks/: useLiveData.js
supabase/: public_fantasy_game.sql  public_fantasy_game_v2_migration.sql  public_fantasy_game_v3_idempotency.sql
(+11 files in other folders)
